quasar work in progress